--- a/html/app.html
+++ b/html/app.html
@@ -2,98 +2,140 @@
 <html>
 	<head>
 	<meta charset="utf-8">
-	
-	<title>在线安装 </title> 
-	
+	<title>在线安装 </title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0"/>
-
-		<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" /> 
-
-		<link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" /> 
-		<link rel="stylesheet" href="../assets/jquery-mobile-fluid960.css" /> 
-			
-		
-		<script src="../lib/jquery/jquery.min.js"></script>		
-		<script src="../lib/jquery-cookie/jquery.cookie.js"></script>	
-		<script src="../lib/encrypt/encrypt.js"></script>
-		<script src="../lib/json/json2.js"></script>
-		<script src="../lib/hori/hori.js?tag=21369"></script>
-		
-		<script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
-		
-		<script src="../config/web/config.js"></script>
-		
-<style type="text/css">
-.download-btn{
-	position: absolute;
-    right: 0px;
-    top: 0px;
-    width: 4em;
-    height: 50%;
-    line-height: 2.5;
-}
-.download_head{
-	font-size: 18px;
-	font-weight: 700;
-}
-.ui-li-static.ui-li{
-	padding: 0.1em 15px;
-}
-.ui-li-desc{
-	margin:0.2em 0em;
-}
-.ui-btn-corner-all{
-	border-radius: 2em;
-}
-</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0"/>
+	<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" /> 
+	<link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" /> 
+	<link rel="stylesheet" href="../assets/jquery-mobile-fluid960.css" />
+	<script src="../lib/jquery/jquery.min.js"></script>
+	<script src="../lib/hori/hori.js?tag=21369"></script>
+	<script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
+	<style type="text/css">
+	.download-btn{
+		position: absolute;
+		right: 0px;
+		top: 8px;
+		width: 4em;
+		height: 50%;
+		line-height: 2.5;
+	}
+	.download_head{
+		font-size: 18px;
+		font-weight: 700;
+	}
+	.ui-li-static.ui-li{
+		padding: 0.1em 4px;
+	}
+	.ui-li-desc{
+		margin:0.2em 0em;
+	}
+	.ui-btn-corner-all{
+		border-radius: 2em;
+	}
+	</style>
+	<script>
+	$(document).ready(function() {
+		$.hori.hideLoading();
+		hideAll();
+		if (getDeviceType() == "pc") {
+			showAll(); //显示所有
+		} else if (getDeviceType() == "android") {
+			$(".android_item").css("display", "block");
+		} else if (getDeviceType() == "iphone") {
+			$(".ios_item").css("display", "block");
+		}
+	});
+	function showAll() {
+		$(".android_item").css("display", "block");
+		$(".ios_item").css("display", "block");
+	}
+	function hideAll() {
+		$(".android_item").css("display", "none");
+		$(".ios_item").css("display", "none");
+	}
+	function getDeviceType() {
+		var type = "pc";
+		if (window.navigator.userAgent.match(/iPad/i)
+				|| window.navigator.userAgent.match(/iPhone/i)
+				|| window.navigator.userAgent.match(/iPod/i)) {
+			type = "iphone";
+		} else if (window.navigator.userAgent.match(/Android/i)) {
+			type = "android";
+		}
+		return type;
+	}
+	</script>
 </head> 
 <body> 
 
 	<div data-role="page" class="type-interior">
-
-		<div data-role="header" data-theme="b">
+		<!-- <div data-role="header" data-theme="b">
 		<h1>移动办公在线安装</h1>
-		
-
-	</div><!-- /header -->
+		</div> -->
 
 	<div data-role="content">
 		<div style="margin:-15px">
 			<img  style="width:100%" src="../assets/download_top.jpg"></img>
 		</div>
-		<div><p style="font-size:18px;font-weight:700"> 通号移动应用安装下载平台</p></div>
+		<div>
+			<img  style="height:25px;margin-bottom: -25px;" src="../assets/home/items/module-res/line.png"></img>
+			<p style="font-size:18px;font-weight:700;margin-top: -4px;margin-left: 11px;">通号移动应用安装下载平台</p>
+		</div>
 		<ul data-role="listview">
 			
-			<li class="ui-btn  ui-li ui-btn-up-c">
+			<li class="android_item">
 				<div class="ui-btn-inner ui-li container_12">
-					<div class="grid_2" style="min-width:64px;min-height:64px">
+					<div class="grid_2">
 						<img src="../assets/connections.png" style="max-width:64px;max-height:64px"></img>
 					</div>
 					<div class="grid_9">
 						<p class="download_head">通号社区</p>
-						<p>支持系统：安卓、苹果</p>
+						<p>支持系统：安卓</p>
 						<p>发布时间：2015-01-28</p>
 					</div>
-
 					<a class="ui-btn ui-shadow ui-btn-corner-all ui-btn-up-f download-btn">下载</a>
 				</div>
 			</li>
-			<li class="ui-btn  ui-li ui-btn-up-c">
+			<li class="android_item">
 				<div class="ui-btn-inner ui-li container_12">
-					<div class="grid_2" style="min-width:64px;min-height:64px">
+					<div class="grid_2">
 						<img src="../assets/moa.png" style="max-width:64px;max-height:64px"></img>
 					</div>
 					<div class="grid_9">
 						<p class="download_head">移动办公</p>
-						<p>支持系统：安卓、苹果</p>
+						<p>支持系统：安卓</p>
 						<p>发布时间：2015-01-28</p>
 					</div>
-
+					<a href="http://m.crsc.cn:8981/download/mobiletonghao/android"  target="_blank" class="ui-btn ui-shadow ui-btn-corner-all ui-btn-up-f download-btn">下载</a>
+				</div>
+			</li>
+			<li class="ios_item">
+				<div class="ui-btn-inner ui-li container_12">
+					<div class="grid_2">
+						<img src="../assets/connections.png" style="max-width:64px;max-height:64px"></img>
+					</div>
+					<div class="grid_9">
+						<p class="download_head">通号社区</p>
+						<p>支持系统：苹果</p>
+						<p>发布时间：2015-01-28</p>
+					</div>
 					<a class="ui-btn ui-shadow ui-btn-corner-all ui-btn-up-f download-btn">下载</a>
 				</div>
 			</li>
-			
+			<li class="ios_item">
+				<div class="ui-btn-inner ui-li container_12">
+					<div class="grid_2">
+						<img src="../assets/moa.png" style="max-width:64px;max-height:64px"></img>
+					</div>
+					<div class="grid_9">
+						<p class="download_head">移动办公</p>
+						<p>支持系统：苹果</p>
+						<p>发布时间：2015-01-28</p>
+					</div>
+					<a target="_self"  href="itms-services://?action=download-manifest&url=https://dn-horitech.qbox.me/tonghao_mainfest.plist" class="ui-btn ui-shadow ui-btn-corner-all ui-btn-up-f download-btn">下载</a>
+				</div>
+			</li>
 			
 		</ul>
 	
