--- a/html/contact.html
+++ b/html/contact.html
@@ -1,15 +1,12 @@
-
 <html>
 <head>
-<title>通讯录</title>
+<title>人员列表</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
 
 <link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" />
 <link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
-<script type="application/javascript" src="../assets/iscroll.js"></script>
 <script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
 <script src="../lib/jquery-cookie/jquery.cookie.js"></script>
@@ -17,51 +14,45 @@
 <script src="../lib/json/json2.js"></script>
 <script src="../lib/hori/hori.js?tag=21369"></script>
 <script src="../config/web/config.js"></script>
-
-<script src="../lib/knockout/knockout.js"></script>
-<script src="../lib/knockout/knockout.mapping.js"></script>
+<script src="../lib/arttemplate/template.js"></script>
 <script src="../lib/app/contact/app.js"></script>
 <style type="text/css">
-	#wrapper {
-		position: fixed;
-		overflow: scroll;
-		top: 80px;
-		left: 1px;
-		bottom: 1.5em;
-		width: 100%;
+	.img_span{
+		margin-left: -55px;
 	}
-	#divContact{
-	    background-image: url('../assets/home/contact.png');
-	    background-repeat: no-repeat;
-	    background-position: center;
+	.img_spanuser{
+		margin-left: -85px;
 	}
-	.ui-li-thumb, .ui-listview .ui-li-icon {
-		max-height: 300px;
-		max-width: 120px;
-    }
-    
-    .ui-listview>.ui-li.ui-last-child .ui-li-thumb:not(.ui-li-icon) {
-		-webkit-border-bottom-left-radius: initial;
-		border-bottom-left-radius: initial;
-	}
-	
-	.ui-listview>.ui-li.ui-first-child .ui-li-thumb:not(.ui-li-icon) {
-		-webkit-border-top-left-radius: initial;
-		border-top-left-radius: initial;
+	.ui-btn-icon-left>.ui-btn-inner>.ui-icon, .ui-btn-icon-right>.ui-btn-inner>.ui-icon {
+		position: absolute;
+		top: 40%;
+		margin-top: -9px;
 	}
 	.ui-li-has-thumb .ui-btn-inner a.ui-link-inherit, .ui-li-static.ui-li-has-thumb {
-	   min-height: 59px;
-	   padding-left: 130px;
-	}
-	.ui-corner-all{
-		-webkit-border-radius: 0em;
-		border-radius: 0em;
-	}
-	.ui-btn-corner-all {
-		-webkit-border-radius: 0em;
-		border-radius: 0em;
+		min-height: 20px;
 	}
 </style>
+<script id="contactUsers" type="text/html">
+	<ul data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow" >
+		{{each list as value i}}
+			<li style="height: 60px;line-height: 2.5;" data-corners="false" data-shadow="false" data-iconshadow="true" data-wrapperels="div" data-theme="f" class="ui-btn ui-btn-icon-right ui-li-has-arrow ui-li ui-li-has-thumb ui-first-child ui-btn-up-c">
+				<div class="ui-btn-inner ui-li">
+					<div class="ui-btn-text">
+						<a onclick="loadContact(this)" class="ui-link-inherit" data-userid={{value.uid}}><table style="width: 100%;margin-top: -8px;margin-left: -100px;">
+						<tbody><tr>
+							<td style="width: 1%;"><img style="width: 50px;" src="../assets/home/items/module-res/contact/person.png"></td>
+							<td style="min-width:50px"><h3 class="ui-li-heading">{{value.displayName}}</h3></td>
+							<td style="width: 50%;"></td>
+							<td style="width:30%;line-height: 25px;"><span style="white-space: nowrap;color: #434343;font-size: 15px;font-family: Microsoft YaHei;">{{value.crscCompanyName}}</span><br><span style="white-space: nowrap;color: #434343;font-size: 15px;font-family: Microsoft YaHei;">{{value.crscDepName}}</span></td>
+							<td></td>
+						</tr></tbody>
+						</table></a>
+					</div>
+				</div>
+			</li>
+		{{/each}}
+	</ul>
+</script>
 </head>
 <body>
 	<div id="list" data-role="page">
@@ -82,38 +73,7 @@
 					</tr>
 				</table>
 			</div>
-
-			<div id="divContact">
-				<div id="wrapper" style="display: none; ">
-					<div id="scroller">
-						<div style="margin-top:30px;">
-							<br />
-							<ul data-bind="foreach: data" data-role="listview"
-								data-inset="false" id="contactList">
-								<li>
-								<img src="../assets/home/items/module-res/contact/default_avatar.png" 
-                                    style="margin-left: 20px; margin-top: 10px; margin-right: 10px; vertical-align: middle;" />
-								    <!-- <font>员工编号：><span data-bind="text: uid"></span></font><br> -->
-									<font><!-- 员工姓名： --><span data-bind="text: displayName"></span></font><br>
-									<font><!-- 电子邮箱： --><span data-bind="text: mail"></span></font><br>
-									<font><!-- 所属公司： --><span data-bind="text: crscCompanyName"></span></font><br>
-									<font><!-- 所属部门： --><span data-bind="text: crscDepName"></span></font><br>
-									<font>移动电话：<a data-bind="attr: {href: telcrscMobileHR}"><span data-bind="text: crscMobileHR"></span></a></font><br> 
-									<font>办公电话：<a data-bind="attr: {href: telcrscOfficePhoneHR}"><span data-bind="text: crscOfficePhoneHR"></span></a></font><br>
-								</li>
-							</ul>
-						</div>
-						<div id="pullUp" name="nodata" align="center" class="" style="display: none; line-height: 1.25em; margin-top:10px;">
-							<span class="pullUpLabel">
-                            </span>
-						</div>
-						<div>
-							<br />
-						</div>
-					</div>
-				</div>
-				
-
+			<div id="divContactCon">
 			</div>
 		</div>
           <div id="empty_bg" style="width: 100%; padding: 0px; margin: 0px;">
